# aaeo-website

./: .gitignore  .supabase_config  404.html  CNAME  Cargo.toml  bonnie.toml  index.html  package-lock.json  package.json
.github/workflows/: cd.yml
.perseus/: bundle.js  bundle.wasm
.perseus/static/: ciee.avif  participants.avif  tailwind.css  team.avif  unsw.avif
auth_redirect/: index.html
competition/2023/: index.html
competition/2024/: index.html
content/: .gitignore  about.txt  competition.md  contact.md  sponsor_ciee.txt  sponsor_elite.txt  sponsor_unsw.txt
content/2023/: All participants and staff.avif  summary.md
content/2024/: Australian Team.avif  Bronze Medalist.avif  Judges.avif  New Zealand Team.avif  Quant Lecture.avif  Romanian Team.avif  Silver Medalist.avif  Singaporean Team.avif  Taiwanese Team.avif  summary.md
schedule/: index.html
src/: global_state.rs  main.rs  supabase.js  supabase.rs
src/capsules/: container.rs  mod.rs  sponsor.rs
static/: compass.avif  competition-2023-Australian team presenting.avif  competition-2023-Australian team with gold medals.avif  competition-2023-Australian team.avif  competition-2023-New Zealand team.avif  competition-2024-Chinese Team.avif  competition-2024-Everyone.avif  competition-2024-Gold Medalist.avif  competition-2024-Individual Winners.avif  competition-2024-Malaysian Team.avif  competition-2024-Taiwanese Team (with Leaders).avif  competition-2024-Team Order Game.avif  competition-2024-Top 3 Teams.avif  elite.avif  people.avif
styles/: index.css  tailwind.config.js
(+15 files in other folders)
